DD MMM YYYY - 2.9.2 - To be released
------------------------------------

 * Fix collection naming problem while merging collections.
   [Issue #1274 - Coty Sutherland and @zimmerle]
 * Fix --enable-docs adding missing Makefile, modifying autoconf and filenames
   [Issue #1322 - @victorhora]
 * Change from using rand() to thread-safe ap_random_pick.
   [Issue #1289 - Robert Bost]
 * Cosmetics: added comments on odd looking code to prevent future
   scrutiny
   [Issue #1279 - Coty Sutherland]
 * {dis|en}able-server-context-logging: Option to disable logging of
   server info (log producer, sanitized objects, ...) in audit log.
   [Issue #1069 - Marc Stern]
 * Allow drop to work with mod_http2
   [Issue #1308, #992 - @bazzadp]
 * Fix SecConn(Read|Write)StateLimit on Apache 2.4
   [Issue #1340, #1337, #786 - Sander Hoentjen]
 * {dis|en}able-stopwatch-logging: Option to disable logging of stopwatches
   in audit log.
   [Issue #1067 - Marc Stern]
 * {dis|en}able-dechunk-logging: Option to disable logging of
   dechunking in audit log when log level < 9.
 * Updates libinjection to: da027ab52f9cf14401dd92e34e6683d183bdb3b4
   [ModSecurity team]
 * {dis|en}able-handler-logging: Option to disable logging of Apache handler
   in audit log
   [Issue #1070, #1381 - Marc Stern]
 * {dis|en}able-collection-delete-problem-logging: Option to disable logging of
   collection delete problem in audit log when log level < 9.
   [Issue #1380 - Marc Stern]
 * Adds rule id in logs whenever a rule fail.
   [Issue #1379, #391 - Marc Stern]
 * {dis|en}able-server-logging: Option to disable logging of
   "Server" in audit log when log level < 9.
   [Issue #1070 - Marc Stern]
 * {dis|en}able-filename-logging: Option to disable logging of filename
   in audit log.
   [Issue #1065 - Marc Stern]
 * Reads fuzzy hash databases on init
   [Issue #1339 - Robert Paprocki and @Rendername]
 * Changes the configuration to recognize soap+xml as XML
   [Issue #1374 - @emphazer and Chaim Sanders]