@@ -120,18 +120,21 @@ static apr_table_t *collection_retrieve_ex(apr_sdbm_t *existing_dbm, modsec_rec 
     key.dsize = col_key_len + 1;
 
     if (existing_dbm == NULL) {
+#ifdef GLOBAL_COLLECTION_LOCK
         rc = apr_global_mutex_lock(msr->modsecurity->dbm_lock);
         if (rc != APR_SUCCESS) {
             msr_log(msr, 1, "collection_retrieve_ex: Failed to lock proc mutex: %s",
                     get_apr_error(msr->mp, rc));
             goto cleanup;
         }
-
+#endif
         rc = apr_sdbm_open(&dbm, dbm_filename, APR_READ | APR_SHARELOCK,
             CREATEMODE, msr->mp);
         if (rc != APR_SUCCESS) {
             dbm = NULL;
+#ifdef GLOBAL_COLLECTION_LOCK
             apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#endif
             goto cleanup;
         }
     }
@@ -165,7 +168,9 @@ static apr_table_t *collection_retrieve_ex(apr_sdbm_t *existing_dbm, modsec_rec 
     /* Close after "value" used from fetch or memory may be overwritten. */
     if (existing_dbm == NULL) {
         apr_sdbm_close(dbm);
+#ifdef GLOBAL_COLLECTION_LOCK
         apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#endif
         dbm = NULL;
     }
 
@@ -212,19 +217,23 @@ static apr_table_t *collection_retrieve_ex(apr_sdbm_t *existing_dbm, modsec_rec 
      */
     if (apr_table_get(col, "KEY") == NULL) {
         if (existing_dbm == NULL) {
+#ifdef GLOBAL_COLLECTION_LOCK
             rc = apr_global_mutex_lock(msr->modsecurity->dbm_lock);
             if (rc != APR_SUCCESS) {
                 msr_log(msr, 1, "collection_retrieve_ex: Failed to lock proc mutex: %s",
                         get_apr_error(msr->mp, rc));
                 goto cleanup;
-            }            
+            }
+#endif
             rc = apr_sdbm_open(&dbm, dbm_filename, APR_CREATE | APR_WRITE | APR_SHARELOCK,
                 CREATEMODE, msr->mp);
             if (rc != APR_SUCCESS) {
                 msr_log(msr, 1, "collection_retrieve_ex: Failed to access DBM file \"%s\": %s",
                     log_escape(msr->mp, dbm_filename), get_apr_error(msr->mp, rc));
                 dbm = NULL;
+#ifdef GLOBAL_COLLECTION_LOCK
                 apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#endif
                 goto cleanup;
             }
         }
@@ -247,7 +256,9 @@ static apr_table_t *collection_retrieve_ex(apr_sdbm_t *existing_dbm, modsec_rec 
 
         if (existing_dbm == NULL) {
             apr_sdbm_close(dbm);
+#ifdef GLOBAL_COLLECTION_LOCK
             apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#endif
             dbm = NULL;
         }
 
@@ -310,16 +321,20 @@ static apr_table_t *collection_retrieve_ex(apr_sdbm_t *existing_dbm, modsec_rec 
             log_escape(msr->mp, col_name), log_escape_ex(msr->mp, col_key, col_key_len));
 
         apr_sdbm_close(dbm);
-        apr_global_mutex_unlock(msr->modsecurity->dbm_lock);    
+#ifdef GLOBAL_COLLECTION_LOCK
+        apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#endif
     }
-    
+
     return col;
 
 cleanup:
 
     if ((existing_dbm == NULL) && dbm) {
         apr_sdbm_close(dbm);
-        apr_global_mutex_unlock(msr->modsecurity->dbm_lock);    
+#ifdef GLOBAL_COLLECTION_LOCK
+        apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#endif
     }
 
     return NULL;
@@ -384,6 +399,7 @@ int collection_store(modsec_rec *msr, apr_table_t *col) {
                 log_escape(msr->mp, dbm_filename));
     }
 
+#ifdef GLOBAL_COLLECTION_LOCK
     /* Need to lock to pull in the stored data again and apply deltas. */
     rc = apr_global_mutex_lock(msr->modsecurity->dbm_lock);
     if (rc != APR_SUCCESS) {
@@ -391,6 +407,7 @@ int collection_store(modsec_rec *msr, apr_table_t *col) {
                 get_apr_error(msr->mp, rc));
         goto error;
     }
+#endif
 
     /* Delete IS_NEW on store. */
     apr_table_unset(col, "IS_NEW");
@@ -439,7 +456,7 @@ int collection_store(modsec_rec *msr, apr_table_t *col) {
         var->value = apr_psprintf(msr->mp, "%d", counter + 1);
         var->value_len = strlen(var->value);
     }
-    
+
     /* ENH Make the expiration timestamp accessible in blob form so that
      * it is easier/faster to determine expiration without having to
      * convert back to table form
@@ -448,13 +465,24 @@ int collection_store(modsec_rec *msr, apr_table_t *col) {
     rc = apr_sdbm_open(&dbm, dbm_filename, APR_CREATE | APR_WRITE | APR_SHARELOCK,
         CREATEMODE, msr->mp);
     if (rc != APR_SUCCESS) {
+#ifdef GLOBAL_COLLECTION_LOCK
         apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#endif
         msr_log(msr, 1, "collection_store: Failed to access DBM file \"%s\": %s", log_escape(msr->mp, dbm_filename),
             get_apr_error(msr->mp, rc));
         dbm = NULL;
         goto error;
     }
-    
+
+#ifndef GLOBAL_COLLECTION_LOCK
+    /* Need to lock to pull in the stored data again and apply deltas. */
+    rc = apr_sdbm_lock(dbm, APR_FLOCK_EXCLUSIVE);
+    if (rc != APR_SUCCESS) {
+        msr_log(msr, 1, "collection_store: Failed to exclusivly lock DBM file \"%s\": %s", log_escape(msr->mp, dbm_filename),
+            get_apr_error(msr->mp, rc));
+        goto error;
+    }
+#endif
 
     /* If there is an original value, then create a delta and
      * apply the delta to the current value */
@@ -519,8 +547,13 @@ int collection_store(modsec_rec *msr, apr_table_t *col) {
     blob = apr_pcalloc(msr->mp, blob_size);
     if (blob == NULL) {
         if (dbm != NULL) {
+#ifdef GLOBAL_COLLECTION_LOCK
             apr_sdbm_close(dbm);
             apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#else
+            apr_sdbm_unlock(dbm);
+            apr_sdbm_close(dbm);
+#endif
         }
 
         return -1;
@@ -577,16 +610,26 @@ int collection_store(modsec_rec *msr, apr_table_t *col) {
         msr_log(msr, 1, "collection_store: Failed to write to DBM file \"%s\": %s", dbm_filename,
                 get_apr_error(msr->mp, rc));
         if (dbm != NULL) {
+#ifdef GLOBAL_COLLECTION_LOCK
             apr_sdbm_close(dbm);
-            apr_global_mutex_unlock(msr->modsecurity->dbm_lock);            
+            apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#else
+            apr_sdbm_unlock(dbm);
+            apr_sdbm_close(dbm);
+#endif
         }
 
         return -1;
     }
 
+#ifdef GLOBAL_COLLECTION_LOCK
     apr_sdbm_close(dbm);
     apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
-    
+#else
+    apr_sdbm_unlock(dbm);
+    apr_sdbm_close(dbm);
+#endif
+
     if (msr->txcfg->debuglog_level >= 4) {
         msr_log(msr, 4, "collection_store: Persisted collection (name \"%s\", key \"%s\").",
             log_escape_ex(msr->mp, var_name->value, var_name->value_len),
@@ -630,17 +673,21 @@ int collections_remove_stale(modsec_rec *msr, const char *col_name) {
                 log_escape(msr->mp, dbm_filename));
     }
 
+#ifdef GLOBAL_COLLECTION_LOCK
     rc = apr_global_mutex_lock(msr->modsecurity->dbm_lock);
     if (rc != APR_SUCCESS) {
         msr_log(msr, 1, "collections_remove_stale: Failed to lock proc mutex: %s",
                 get_apr_error(msr->mp, rc));
         goto error;
     }
-    
+#endif
+
     rc = apr_sdbm_open(&dbm, dbm_filename, APR_CREATE | APR_WRITE | APR_SHARELOCK,
             CREATEMODE, msr->mp);
     if (rc != APR_SUCCESS) {
+#ifdef GLOBAL_COLLECTION_LOCK
         apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#endif
         msr_log(msr, 1, "collections_remove_stale: Failed to access DBM file \"%s\": %s", log_escape(msr->mp, dbm_filename),
                 get_apr_error(msr->mp, rc));
         dbm = NULL;
@@ -649,6 +696,15 @@ int collections_remove_stale(modsec_rec *msr, const char *col_name) {
 
     /* First get a list of all keys. */
     keys_arr = apr_array_make(msr->mp, 256, sizeof(char *));
+
+#ifndef GLOBAL_COLLECTION_LOCK
+    rc = apr_sdbm_lock(dbm, APR_FLOCK_SHARED);
+    if (rc != APR_SUCCESS) {
+        msr_log(msr, 1, "collections_remove_stale: Failed to lock DBM file \"%s\": %s", log_escape(msr->mp, dbm_filename),
+            get_apr_error(msr->mp, rc));
+        goto error;
+    }
+#endif
 
     /* No one can write to the file while doing this so
      * do it as fast as possible.
@@ -661,6 +717,9 @@ int collections_remove_stale(modsec_rec *msr, const char *col_name) {
         }
         rc = apr_sdbm_nextkey(dbm, &key);
     }
+#ifndef GLOBAL_COLLECTION_LOCK
+    apr_sdbm_unlock(dbm);
+#endif
 
     if (msr->txcfg->debuglog_level >= 9) {
         msr_log(msr, 9, "collections_remove_stale: Found %d record(s) in file \"%s\".", keys_arr->nelts,
@@ -729,14 +788,18 @@ int collections_remove_stale(modsec_rec *msr, const char *col_name) {
     }
 
     apr_sdbm_close(dbm);
+#ifdef GLOBAL_COLLECTION_LOCK
     apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#endif
     return 1;
 
 error:
 
     if (dbm) {
         apr_sdbm_close(dbm);
+#ifdef GLOBAL_COLLECTION_LOCK
         apr_global_mutex_unlock(msr->modsecurity->dbm_lock);
+#endif
     }
 
     return -1;
