@@ -545,6 +545,23 @@ AC_ARG_ENABLE(server-context-logging,
   log_server_context=''
 ])
 
+
+# Enable collection's global lock
+AC_ARG_ENABLE(collection-global-lock,
+              AS_HELP_STRING([--enable-collection-global-lock],
+                             [Enable collection correctness by using a global lock. May reduce performance significatively. This is disabled by default]),
+[
+  if test "$enableval" != "yes"; then
+    collection_global_lock=""
+  else
+    collection_global_lock="-DGLOBAL_COLLECTION_LOCK"
+  fi
+],
+[
+  collection_global_lock=''
+])
+
+
 # Ignore configure errors
 AC_ARG_ENABLE(errors,
               AS_HELP_STRING([--disable-errors],
@@ -795,7 +812,7 @@ else
   fi
 fi
 
-MODSEC_EXTRA_CFLAGS="$pcre_study $pcre_match_limit $pcre_match_limit_recursion $pcre_jit $request_early $htaccess_config $lua_cache $debug_conf $debug_cache $debug_acmp $debug_mem $perf_meas $modsec_api $cpu_type $unique_id $log_filename $log_server $log_collection_delete_problem $log_dechunk $log_stopwatch $log_handler $log_server_contex"
+MODSEC_EXTRA_CFLAGS="$pcre_study $pcre_match_limit $pcre_match_limit_recursion $pcre_jit $request_early $htaccess_config $lua_cache $debug_conf $debug_cache $debug_acmp $debug_mem $perf_meas $modsec_api $cpu_type $unique_id $log_filename $log_server $log_collection_delete_problem $log_dechunk $log_stopwatch $log_handler $log_server_contex $collection_global_lock"
 
 APXS_WRAPPER=build/apxs-wrapper
 APXS_EXTRA_CFLAGS=""
