@@ -1,6 +1,8 @@
 DD MMM YYYY - 2.9.2 - To be released
 ------------------------------------
 
+ * Uses an optional global lock while manipulating collections.
+   [Issues #1224 - @mturk and @zimmerle]
  * Fix collection naming problem while merging collections.
    [Issue #1274 - Coty Sutherland and @zimmerle]
  * Fix --enable-docs adding missing Makefile, modifying autoconf and filenames
